--- a/paper/paper20151214.md
+++ b/paper/paper20151214.md
@@ -4,7 +4,7 @@
 寒冬已经来临，而资本的寒冬，更是从心灵上影响着每一个创业者，起码从外界的感受上是这个样子的。“谁将是下一个BAT”、“创业公司倒闭潮”、“移动优先”、“快速迭代”等等关键字，互联网充斥着各种各样的消息、教训、成功论、互联网思维、鸡汤、毒舌、告诫，而我在公司，看到的只有一位位默默工作的创业者。  
 于是饼越画越大，“梦想还是要有的，万一实现了呢？”马云的话在我们背后环绕，于是我们迈向前方，成为又一名创业者。为什么用我们，仿佛这样我就与你，我们就与所有创业者同在了，看着朋友圈、公众号发的咨询文章，一下子就热血沸腾起来，想到自己为什么不去创业，只要理想足够遥远，心足够大，掌握“快速迭代”、“用户优先”、“拥有核心竞争力”、“掌握大数据”、“实现定制化”......繁多的关键字让我们眼花缭乱，信息业被越来越碎片化，我们不断地吸收着从别人那总结的定论，以为世界就在我们手中的手机上，但我们手中还是只有手机，和越来越用不完的流量，却少了许多专注。  
 是否曾问过自己，为什么要去创业，再退一万步说，自己喜欢的是什么？真正的初心，钱？下一个BAT？不要被外界所迷惑，寻找回内心的自己，做一回，安静的自己，享受一下内心的孤独，问问自己想要的是什么。如果是随随便便就被拉去创业、去合伙，是很危险的，怎么也需要对自己的产品或是服务所做的有兴趣，作为创业者，怎么也要有十足的自信，如果连自己都没办法相信的产品，凭什么值得放出来推敲呢，所以我认为，创业者是孤独的，不是人数量上的孤独，而是一种内心深处的孤独，因为只有自己知道自己想要做什么，只有自己才能告诉自己下一步需要做什么，别人告诉自己的，也许是对的，也或者是错的，但是无论是什么，后果也是创业者自己去面对的。无论别人能够指引自己到哪里，最终还是需要自己去摸索、前进，还有认识更多的人帮助自己。不要为了做而做，不要为了不做而不做，要拥有自己的独立思考，并且怀有初心。  
-自己也在实习待在一间初创公司，这家公司的前身是我在校的实验室做的一个项目，经历了两年的团队磨合、产品打磨，现在终于慢慢走向了正轨，还记得在两年前的暑假里，我们每天马不停蹄地在实验室里面赶进度，每天既充实也煎熬，在做产品的道路上遇到许许多多的问题，而这些问题更多的是以一种不确定的方式出现的，因为在真正知道这是一个问题的时候，通常已经是一个大问题了，而因为缺乏经验，其实很多时候已经埋下了祸根。在两年前，前一位安卓工程师、我、在项目里的所有人，都存在着一股阴暗面，一方面因为产品仍未成功，但是另一方面无限地拖下去已经让人的积极性盖上很大一片阴沉，而就是这股掺杂在希望与消极情绪的氛围，让我不敢或是说不愿意花力气去直击所遇到的痛点，这些藏在身边的绊脚石如果不除掉，将会对团队产生致命一击，显然当年年已经深受其害，最严重的就是在沟通上的障碍，以及技术上不肯承认的短板，上一位安卓工程师就是在发现了在技术上根本无法实现而管理上存在盲目的自信下，“背叛”逃离的，当时的我并没有发现这个问题的严重性，知道之后看到手机版上如此的不顺畅才会想到问题已经如此的严重，以及其实问题已经出现很久，当时的手机版其实根本不能用，太过不稳定，只是一个demo，而当时消极的心态致使自己一直在逃避，并没有指出  
+自己也在实习待在一间初创公司，这家公司的前身是我在校的实验室做的一个项目，经历了两年的团队磨合、产品打磨，现在终于慢慢走向了正轨，还记得在两年前的暑假里，我们每天马不停蹄地在实验室里面赶进度，每天既充实也煎熬，在做产品的道路上遇到许许多多的问题，而这些问题更多的是以一种不确定的方式出现的，因为在真正知道这是一个问题的时候，通常已经是一个大问题了，而因为缺乏经验，其实很多时候已经埋下了祸根。在两年前，前一位安卓工程师、我、在项目里的所有人，都存在着一股阴暗面，一方面因为产品仍未成功，但是另一方面无限地拖下去已经让人的积极性盖上很大一片阴沉，而就是这股掺杂在希望与消极情绪的氛围，让我不敢或是说不愿意花力气去直击所遇到的痛点，这些藏在身边的绊脚石如果不除掉，将会对团队产生致命一击，显然当年年已经深受其害，最严重的就是在沟通上的障碍，以及技术上不肯承认的短板，上一位安卓工程师就是在发现了在技术上根本无法实现而管理上存在盲目的自信下，“背叛”逃离的，当时的我并没有发现这个问题的严重性，直到之后看到手机版上如此的不顺畅才会想到问题已经如此的严重，以及其实问题已经出现很久，当时的手机版其实根本不能用，太过不稳定，只是一个demo，而当时消极的心态致使自己一直在逃避，并没有指出  
 技术上的短板带来的后果是设计上的匆匆制定，可以说是烂极了，设计为了“媲美”技术上的工作量，没有对产品进行认真的思考就匆匆开始实现，导致后来出现了种种问题与改动，又反过来加重了技术的工作量，真是讽刺十足的是，一直强调时间的不足，却不能清楚地认识到时间不足最大的原因是需求一直改动，而需求改动是需要去理解的，而如果技术与设计上达不到理解，设计的时候就会畏手畏脚，而设计出来的东西也注定只是辩论出来妥协的产物，最后难逃再次推敲制定的命运。多少次就是在这里浪费太多的时间，也因此导致没有时间讨论的局面。如果一个设计师已经无心设计，而只是为了说服别人，而妥协自己的产品，那这产品注定是妥协自己的产物。这里并不是说不需要得到大家的认同，而是希望这是一个经过思考、交流，而不是争吵中一步步双方逼到死路的产物。同时，争吵在打磨一件产品中也是十分有必要的，但争吵过后仍需思考，而不能够变成，你说什么就什么，我懒得去管、没力气去管的局面，然后就将问题延后，在未来再遇一个更大的坑。  
 每天看似忙碌的我们，却永远似乎到达不了节点，拖了一天又一天、一个月有一个月，产品还是不能上线，每天都看似做了许多东西、改了不少bug，产品越来越完善，可是产品始终还是不够稳定导致不能上线在那段时间实在是打击团队的信心。这种状况在手机版体验过两次，最后出来的移动端还是有不少的问题，而在电脑浏览器插件端稍微顺利一点，但是每一次的重构都出现许多不稳定的问题，反而是在最开始的时候能够快速出来产品。我们太容易想到不同的“好点子”了，结果一个功能还没完全完善，就开始为下一个功能打基础了，导致处处都是在做一半，当醒悟过来的时候却不忍心看着自己做出来的东西、自己的好想法被割掉。创业当中、在打磨产品的时候，有太多的不确定因素了，没有一种可能是完全正确的，只能够通过经历、经验与思考，最后通过实践得出结果。  
 所以，当知道了读再多的书、文章，都不如好好去做一件事、好好地经历这个过程时，就会明白网上太多干扰的消息，而我身边的大多数创业者，都是忙得没有时间的，因为太多事情需要做，太多东西需要去尝试，不禁以前做对的事情需要维持，还要连着可能错误的事情都要去尝试，因为道理总是摆在眼前的，但是没有人会告诉创业者，哪条路是对的，哪条路是错的，现在是不是已经馅在了错误的道路上。一切的一切，都需要经验、时间去检验。打工能够相对独立地生活下去，而创业则完全是要想尽办法，妥善应对一切。创业者也许会学着书本做一些事情，这些事情也很可能做得很好，但是最终还是创业者自己做错了，错在少做一些事情，而这些事情是无法从别人口中、书本上、朋友圈的转载中三言两语说明白的，只有通过自身地尝试与不断的经历才能总结出来。  
