--- a/paper/paper20151025.md
+++ b/paper/paper20151025.md
@@ -1,3 +1,4 @@
+######//这其实是不知道第几稿.......正文在最下
 当我们开分享会的时候，分享的是什么？  
 我是实验室的一位大四学生，谭靖纬。  
 这次的分享会，主题是暑期实习分享。大家都知道，暑假的时候实验室大多数大四学生都外出实习了，其他都在准备考研。  
@@ -10,3 +11,22 @@
 当我要开这个分享会的时候，究竟分享的是什么呢？我躺在床上想了很久，始终没有想出，大家究竟为什么要来听这次的分享会，除了听韩寒的段子、饭饭的实习经验，到底从我身上可以得到一些什么。本来我已经把要说的话已经写在了本子上，但是自己读过一次，发现  
 淡定面对自己的机遇与困境的心态。  
 我们终究要在实验室长大、离开，我们不是谁的继承人，做做好的自己。现在我分享的东西只对自己有用，你们听了其实也只是听了。  
+ 
+######//以下才是演讲说的内容
+要开分享会了，其实更希望的只是总结一下自己的经历，失败也好，成功也好，这些都只是自己的一些独立思考。  
+我们分享会最初的题目是实习经历，但是我是上一个月才开始的实习，而最终能够下定决心去实习我觉得是跟自己假期的很多经历有关的，所以我想先说一下自己假期的经历，再来分享上一个月的实习经历，最后联系我的大二大三作为结尾。  
+假期是在这么一个背景下开始的，纯粹的是认识到自己在知识上的极度不足，以及大三整个下学期实在太累，打心底的没有热情下，想回家放松，什么实习都不想。同时对自己也是充满怀疑，所以也没有希望得到老师的推荐。不是不相信老师不能推荐自己到好的公司，而是当时的确不了解自己能够干什么，和喜欢干什么，还有擅长什么。就在这个背景下，我回家自我探索了。而看看同届的其他同学都在实习，表面上我看似无所谓，实际上也不能够干什么。只是头几天每天都会去图书馆装装看书，掩饰一下内心的不安。当然，实际上去图书馆看的一些书对自己之后还是蛮有启发的。特别是《创新公司：皮克斯的启示》，让自己十分大感触。同时，也培养了自己的看书习惯，现在慢慢看多了点书，看了很多本本该初中、高中就去看的书。当然，后来因为假期太多的一个人在家时间，还有从网上听到不少其他同学的实习经历，虽不是眼红他们实习，或可以说是自己对外界还是有些浮，更直白来说，是眼红于他们每天都有丰富的生活，即所谓别人的朋友圈，我只能看到其繁华，于是便想自己也得到一点关注，就去了站酷重新注册了一个号，打算好好经营。当然，因为这种为了设计而设计，自然没有什么人会关注的，自己也自觉这样出的作品定会污染自己对设计的热爱，所以就此停手，只在站酷发表了三个自己的作品（现在已经删掉），唯一的收获是因此不用再另外去专门学习sketch了。  
+真正有收获的，是我接触了我高中同学moving.他与大家一样是学习工业设计的，因为一些契机，我去了跟他和他的同学去设计一个APP.他是在看了我一个作业，也是当时唯一做的一个有动效的动画，我们的观念竟达到了高度的统一。扯了一堆，我终于要进入正题了。  
+广工的同学氛围，或是从我脑补的学习氛围，比我们学校好不止一点点。所说的只是上课氛围和一起做作业的氛围，他们的打机氛围也是异常的浓，以致现在我也不慎患上网瘾（逃.  
+扯多了，我们做的是一款制定旅游行程的APP，那段时间，我们基本上是边学习，边研究，用的就是《破茧成蝶》这本书，一切都是从产品出发，我们都不是艺术生出身，每天都从不同的渠道收集数据，分析什么需求不要，什么留下。遵从书上所说的，需求分析、设计规划、设计实施、对产品定位，进行产品定义、分析用户需求、发掘这个APP的主要功能、产品的特色，得到目标用户，我在这段时间，异常深刻地认为以前自己做的是多么多的错误，多么着急就着手于画设计稿，自己的所谓APP就等于一个空壳。那段时间，我是多么地迷信于书本，在那段时间，我硬下头皮整理了百度旅游、出发吧他们的信息结构图，并认为十分有用，可以更好得知产品的框架结构以及功能的重要级，其实那时每天都是多么愉快充实，同时又是多么颓废与理想状态。每天做的东西其实并没有所说的那么多，反而因为每天都在想着因为有书本的指导，是多么的简单、目标清晰，以致每天都在玩LOL，做LOGO就整了两天时间不断看别人的东西，却没有什么所谓灵感。到了视觉图那一步，之前做的事情并没有任何直接的帮助，依然要每天花大量时间在这个元素放哪里，那个元素放哪里，怎么也找不到重点。终于，假期结束了，因为我不得不回去补考，而暂停了这次制作APP.当时
+
+
+
+
+
+
+
+
+
+
+
