--- a/paper/paper20160210.md
+++ b/paper/paper20160210.md
@@ -1,9 +1,11 @@
 晚上，饭后，阿星独自一人出来散步。适逢过年，周边只剩下附近的购书中心没有关门了，他只有到那里逛一逛。实际上阿星也是那里的常客，每次进去出来，手中就多了几本书。阿星知道自己不是特别爱书的人，更不是什么学者或知识渊博的人，只是他把对生活上的孤寂，寄托在了书上罢了。只有在书本上，才可以不用语言取而代之是用思考来交流，也只有在书本上，他能够凭自己的喜好或快或慢地与书本交流。他不同于一些喜欢读书的人，用着碎片化的时间，快速地阅读一页又一页的书，这样的交流与对别人进行说服并下令无异；他也不是害怕读书的人，只是有时耗在一本书上太久了，就会越发地觉得读下去没有希望，有时翻开书三番五次都发现自己只读下一小段，而对于那些刚读的内容实际完全没有印象。阿星是承认自己对这类书实际在为了读而读的，他总是这样安慰自己：“如果读完了，真有什么收获，那不是很好嘛。”最后被他熬过的这些书，也没有在他的脑海里留下什么。还有一些书，是他心存畏惧、迟迟不敢翻看的，因为他害怕再次遇到那种感觉：那种翻开了，却完全看不下去的感觉。但他知道，那些书，始终有一天是要面对的，比如《电工学》下册。  每逢阿星想到这本书，情绪总会失控，《电工学》真的是这个社会需要的吗，究竟科技需要什么，而我又需要什么，为什么这本《电工学》会伴随我整个大学下半阶段呢？想着这些也没有用，因为他知道只要大学没有被炸掉，他必然必然是要面对这门补考的，而如果连《电工学》都没办法读下去的人，又谈何能够读下一些更深涩、涉及更广的书呢。  
 阿星进购书中心最享受的一件事情，就是在购书中心悄悄地观察着在不同领域看书的人。如果要对人类分门别类的话，那在购书中心就是最理想的分类地点了。你可以在这里根据职业或是爱好，对不同的人分成不同的类别，“给人贴标签”这句本不该从知识分子中说出的话，却在购书中心这个承载知识的地方让知识分子身体力行展现出来。当然，阿星在意的不是这些，他只是好奇平时陌生的职业在自己想象与现实中到底有多大差别，脑海中无形呈现出一幅“我眼中的某某”和“真实中的某某”的画像。  
-坐电梯到了二楼，阿星带着敬仰乔布斯、发自内心地卑微之情，来到“设计”这个领域，渴望沾到如今如日中天的设计师的光。“设计师”，多么令人敬佩的称呼啊！谈笑间，只要一个奇特的点子从脑海中冒出，从此世界又多了一些革新的概念、一个足以造福人类后世的发明，于是工厂、车间灯火通明，无数的工人、程序员为之热泪盈眶，热血工作。  
+坐电梯到了二楼，阿星带着向乔布斯致敬、发自内心地卑微之情，来到“设计”这个领域，渴望沾到如今如日中天的设计师的光。“设计师”，多么令人敬佩的称呼啊！谈笑间，只要一个奇特的点子从脑海中冒出，从此世界又多了一些革新的概念、一个足以造福人类后世的发明，于是工厂、车间灯火通明，无数的工人、程序员为之热泪盈眶，热血工作。  
 “妈妈，我以后也要当设计师！”阿星听到隔壁在看漫画书年龄约五岁的小女孩从内心深处发出的呼喊。  
 “啪”、“啪”、“啪”。  
 “小孩子怎么能乱说话！”在接下来的不到零点三一秒，只见那位小女孩捂着脸被妈妈无情地拖拽出阿星的视野。阿星没有多想，因为在他心中，设计师永远是神圣的。  
-站在阿星面前的是一位有着修长身材的女士，单薄的身子仿佛一阵风就能把她给吹走，但是阿星不知道是什么支撑着她使她看上去十分地坚定。她的年龄看上去跟阿星差不多，应该也是二十岁出头，但是一身着装给她一股成熟的感觉。阿星不敢认真细看，这位女士也没有留意到阿星，她只是安静地在看她手中的书，似乎不受着外界一切的干扰。阿星是多么想达到这种境界的———不受外界的干扰。阿星总是容易受到环境的干扰，从小母亲经常过问独自在房的阿星在干什么，慢慢长大了开始工作，却阴差阳错地跟着当年一个班的几个同学一起在一个小公司工作、一起挤在一个九平米的房子住着。他跟班上那几个同学不是十分熟，实际上在大学期间真心有交流的也只有他的几个宿友了，但是慢慢因为工作的不同，岁月流逝，现在他们能够交流的也只剩下那些大学时追过的女生了。能够跟阿星有深入交流的屈指可数，但是阿星觉得在灵魂深处，肯定还有一些自己一下子没有想到的朋友，可能只是岁月给他们蒙上了遮罩，而在阿星最黑暗、最需要帮助的时候一定会有人伸出手来拉起阿星。有着这股信念，阿星也不会觉得自己孤单，只是有时候表面上会透出一丝丝的孤寂而已。刚刚的那位女士放下了手中的书，与另一个服装整齐、有着长长的头发却十分干净的男子离开了。阿星好奇地走到刚刚女士看书的位置，看了看放下的书———《西方美术简史》。阿星是一个典型的理工型出身学生，与艺术似乎是完全不搭边，而他现在所从事的却是和设计搭边的交互设计。到底什么是交互设计呢？在购书中心的“设计”这个区域，他满眼看上去没有发现任何与“交互”相关的字眼，有的全是“漫画”、“素描”、“环艺”、“室内”等字眼。其实到底什么是设计，虽然阿星毕业半年打着“交互设计师”的头衔，却没有发现自己跟什么设计有任何关联。  
+站在阿星面前的是一位有着修长身材的女士，单薄的身子仿佛一阵风就能把她给吹走，但是阿星不知道是什么支撑着她使她看上去十分地坚定。她的年龄看上去跟阿星差不多，应该也是二十岁出头，但是一身着装给她一种成熟的感觉。阿星不敢对她认真细看，这位女士也没有留意到阿星，她只是安静地在看她手中的书，似乎不受着外界一切的干扰。阿星是多么想达到这种境界的———不受外界的干扰。阿星总是容易受到环境的干扰，从小母亲经常过问独自在房的阿星在干什么，慢慢长大了开始实习，却阴差阳错地跟着当年一个班的几个同学一起去了同一间工作室实习、一起挤在一个九平米的房子住着。他跟班上那几个同学不是十分熟，实际上在大学期间真心有交流的也只有他的几个宿友了，但是慢慢因为工作的不同，岁月流逝，现在他们能够交流的也只剩下那些大学时追过的女生了。能够跟阿星有深入交流的屈指可数，但是阿星觉得在灵魂深处，肯定还有一些自己一下子没有想到的朋友，可能只是岁月给他们蒙上了遮罩，而在阿星最黑暗、最需要帮助的时候一定会有人伸出手来拉起阿星。有着这股信念，阿星也不会觉得自己孤单，只是有时候表面上会透出一丝丝的孤寂而已。刚刚的那位女士放下了手中的书，与另一个服装整齐、有着长长的头发却十分干净的男子离开了。阿星好奇地走到刚刚女士看书的位置，看了看放下的书———《西方美术简史》。阿星是一个典型的理工型出身学生，与艺术似乎是完全不搭边，而他现在所实习的职位却是看似与设计搭边的交互设计。到底什么是交互设计呢？在购书中心的“设计”这个区域，他满眼看上去没有发现任何与“交互”相关的字眼，有的全是“漫画”、“素描”、“环艺”、“室内”等字眼。其实到底什么是设计，虽然阿星实习都是打着“交互设计师助理”的头衔，却没有发现自己跟什么设计有任何关联。因为这几年互联网火热，一下子交互设计成为了热门职业，网上动辄就是招收交互设计师，而阿星正是看到了自己只喜欢动脑不喜欢动手的性格，所以一心扎进了“交互设计圈”。虽然阿星没有什么名气，但是对于现在这个万众创新、大众创业的时代，进一个刚创业、怀着无数遥远梦想的创业公司来说是远远足够了。而其实，在公司实习的头半个月，他除了跟着公司创始人兼CEO兼产品经理兼设计师的老大画画线框图外，也没学会别的任何高大上的东西，因为任何所有所做的东西都被挤压在这不到五英寸的手机上，左滑一下、右滑一下，这里点那里点，除此以外再无新意。APP，万众创新，大众创业。而阿星其实还是庆幸的，因为他不至于再像之前做了一周的实习一样，每天无事做到被上级安排去公司周边拍摄景物来吸引投简历的人。阿星的上一家公司，与其说是无事可做，让阿星更佩服的是那股感动自己的信念。  
+在高中时期，阿星就看到太多感动自己的人了，他们与真正的学霸不同，从气质上就能感受出来，那些人脸上常年摆着痛苦、不愿意，却有魔咒一般将他们绑在自己的座位上，每逢同学经过他们身边，问他们是否去玩，总会看到他们脸上由苦变成一种强拧出来的笑容，极不自然的说出一句：“要复习------好烦。” 说罢似乎能够看见他们流露出发自内心的一股邪笑，似乎是得到了让别人了解了自己需要学习的满足，接着他们低下了头对着说本，而目光却还是停留在问他们的人身上，直到那些人从身边离去。阿星高中也是其中的一份子，后来高考“失利”去了一所普通的当地最好的二本大学之后，就再也没有复习过了，所以也自然没有机会去图书馆、自习室看到这些人了。多年以后，阿星才从这些不知名、走向死亡的创业公司中悟出来，并没有所谓的失利，**一切失败都是注定的，因为一直以来都只是在感动自己，假装努力、假装在看书，却想着各种方法偷懒、熬过在学习的时间，既没有快乐的玩耍也没有吸收进什么知识进去，自然是一直痛苦着了，而结果也与想象中的成功相去甚远，以为自己努力了却没有成功，便会越来越自卑、低迷下去。**  
 “交互设计”，到底是什么呢，阿星曾经苦思冥想过很久也没有得出什么结论。似乎只是在纸上画些条条框框，再玩着一些流程图游戏、连一下线，本子上再记录一下思路一天就过去了。他不像视觉设计般，将界面原原本本地设计在电脑稿上，最后输出物与设计稿完美无瑕地一致，没有给任何人留下“这界面真美”、“这皮肤真好看”的形象，这些都是视觉设计的功劳。交互设计留下的只有一些看上去相貌一般，甚至可以说是丑、潦草、随便的一些“原型”。  
-究竟是什么让阿星一直坚持做一名交互设计师呢，也许阿星自己也不知道。他是一个喜欢思考的人，用“喜欢胡思乱想”可能比“喜欢思考”描述得更加准确。他的脑袋似乎一刻也停不下来，他有时候很羡慕那些能够纯粹在发呆的人，阿星每次只要一停下来，就会忍不住开始思考、碎碎念，而这也促使他去做交互设计这类事情。似乎“交互设计”就是适合这种想东西停不下来的人。
+究竟是什么让阿星一直坚持做一名交互设计师呢，也许阿星自己也不知道。他是一个喜欢思考的人，用“喜欢胡思乱想”可能比“喜欢思考”描述得更加准确。他的脑袋似乎一刻也停不下来，他有时候很羡慕那些能够纯粹在发呆的人，阿星每次只要一停下来，就会忍不住开始思考、碎碎念，而这也促使他去做交互设计这类事情。似乎“交互设计”就是适合这种想东西停不下来的人。  
+而现在阿星不得不停下所有对其他的思考，专心去做一件事------考研。
