--- a/paper/paper20151025.md
+++ b/paper/paper20151025.md
@@ -10,7 +10,7 @@
 当我满足了自己的需求，把暑假和实习的事情总结了之后，就在昨天晚上，我在想，到底什么是大家真正渴望知道的东西，到底什么是大家有兴趣知道的东西，除了听韩寒的段子、饭饭的实习经验，到底从我身上可以得到一些什么，而不是听自己在这里讲快一个小时的大道理。  
 当我要开这个分享会的时候，究竟分享的是什么呢？我躺在床上想了很久，始终没有想出，大家究竟为什么要来听这次的分享会，除了听韩寒的段子、饭饭的实习经验，到底从我身上可以得到一些什么。本来我已经把要说的话已经写在了本子上，但是自己读过一次，发现  
 淡定面对自己的机遇与困境的心态。  
-我们终究要在实验室长大、离开，我们不是谁的继承人，做做好的自己。现在我分享的东西只对自己有用，你们听了其实也只是听了。  
+我们终究要在实验室长大、离开，我们不是谁的继承人，做最好的自己。现在我分享的东西只对自己有用，你们听了其实也只是听了。  
  
 ######//以下才是演讲说的内容
 要开分享会了，其实更希望的只是总结一下自己的经历，失败也好，成功也好，这些都只是自己的一些独立思考。  
