--- a/paper/paper20151101.md
+++ b/paper/paper20151101.md
@@ -8,11 +8,11 @@
 早上，大鹏还是要早早的起来干着枯燥无味重复的活，他本不想去这里实习，伙食住宿已经被老板给压榨，更何况没有工钱，但想到自己差点因为逃课被劝退学，因为有这位老板给他开假证明，才让他有着有得到毕业证的希望，而能得到大学的毕业证，是多少父母孩子拼命赚钱才能换来，他又怎么会不珍惜，所以他才继续在这里为老板操心干活。  
 他昨晚好不容易终于睡着了，在最后一次下床看手机时发现已经凌晨三点四十，为了给自己能够起床多小睡一会，他把闹钟调早了十五分钟，这样他听到闹钟就能再睡个十分钟。他高中的时候也是这样来为自己多睡一会的。  
 第二天，闹钟直接没有叫起他，大鹏直接睡到了九点，他惊醒的同时，也奇怪为什么阿星没有叫他。但是没有功夫想这些事情了，他以以前没有过的速度整理好自己的着装出门了，当然，他工作的地方并不需要自己有什么整齐的着装。  
-来到公司，老板没有少给他黑脸色，但是因为他还只是实习生，也没什么奈何，只是强迫地收了他二十块钱作为惩罚。大鹏看到阿星一脸开心愉快的表情在工作，一整天都没去搭理他。回到宿舍大鹏才责怪阿星:“你为什么今天早上不叫我起床！”“你今天早上没看到我给你写的纸条？”阿星指了指桌子。大鹏大骂一句“什么破纸条！”接着朝放满自己杂物的桌子看去，果然发现一张写了笔迹的纸，不是别的纸，而是一张稍微折过的纸巾。“什么！皱成这样谁看得见，什么鬼东西。”显示大鹏还是一肚子怨气。“今天钢铁侠来找我，她要带我飞遍这个城市。”阿星说这句话的时候，辛福仿佛是从心里传遍各个器官，再透过血液透出皮肤、传到了脸上，带着阿星的温度，再由脸上又通过阿星的口表达出来，幸福似乎溢满了他们两人呆的这个小房子，直到碰到一块冰，“什么鬼东西，无聊。”大鹏扔掉纸巾，向厕所走去。在我们经历的一些事中，别人只对结果感兴趣，而只有自己能回忆到过程，也只有自己会为一些小事情偷偷窃喜与开心。  
+来到公司，老板没有少给他黑脸色，但是因为他还只是实习生，也没什么奈何，只是强迫地收了他二十块钱作为惩罚。大鹏看到阿星一脸开心愉快的表情在工作，一整天都没去搭理他。回到宿舍大鹏才责怪阿星:“你为什么今天早上不叫我起床！”“你今天早上没看到我给你写的纸条？”阿星指了指桌子。大鹏大骂一句“什么破纸条！”接着朝放满自己杂物的桌子看去，果然发现一张写了笔迹的纸，不是别的纸，而是一张稍微折过的纸巾。“什么！皱成这样谁看得见，什么鬼东西。”显示大鹏还是一肚子怨气。“今天钢铁侠来找我，她要带我飞遍这个城市。”阿星说这句话的时候，辛福仿佛是从心里传遍各个器官，再透过血液透出皮肤、传到了脸上，带着阿星的温度，再由脸上又通过阿星的口表达出来，幸福似乎溢满了他们两人呆的这个小房子，直到碰到另外一个不相干的人，“什么鬼东西，无聊。”大鹏扔掉纸巾，向厕所走去。在我们经历的一些事中，别人只对结果感兴趣，而只有自己能回忆到过程，也只有自己会为一些小事情偷偷窃喜与开心。之后的每一天，阿星都会在床上悄悄地拿着手机窃喜，有时还拿出纸跟笔写起了文章。  
 后来，阿星跟大鹏都实习完回学校了。之后的一天里，大鹏与班长一起聊天。大鹏说他有天迟到被扣了工钱，都怪同居的宿友没有叫他起床；班长说她与一个社团的朋友聚了一下，那个朋友很无聊，净扯一些无聊的话题，还晚上经常跟她发微信语音，说她很可爱之类肉麻的话。当时，班长聊的想吐过几次，还是她的室友怂恿她，叫她逗那个男孩才聊下去的。班长还想起了自己的前任，而勾起她的思绪的就是她逗的男孩。那个男孩写了一篇很长的散文给班长，净是表白说的话，被班长一口拒绝了。那个男孩不知道，班长曾经的爱人，曾经写过与其字数相当的十一篇文言文给班长。  
 后来大鹏才知道，阿星读过十万本书，出过十二本散文集，被一个女生拒绝过。  
 阿星删了那个女生的微信，却发现可以不经过那个女生同意就加回来，但这也意味着，无论是加还是删，那个女生都从来没有在意过。而当时删的时候，究竟是一种怎样的心情呢？而电话接通的时候，心情又会是怎样，也许根本谈不上什么心情，有的只是单方面的期待与紧张。  
 “做了朋友应当彼此爱见面；通个电话算接触过了，可是面没有见，所说的话又不能像信那样留着反复看几遍。电话是偷懒人的拜访，吝啬人的通信，最不够朋友！并且，你注意到么？一个人的声音往往在电话里变得认不出，变得难听。”  
-在那个时代，电话就被唾弃；而如今，加个微信便叫做朋友，朋友圈评论几下就算熟悉，加了个公众号便算登门拜访了，大家在群里面乐此不疲地聊着，是多么开心啊！  
+在钱钟书先生那个时代，电话就被唾弃；而如今，加个微信便叫做朋友，朋友圈评论几下就算熟悉，加了个公众号便算登门拜访了，大家在群里面乐此不疲地聊着，是多么开心啊！  
 当手机突然再次响起时，会是怎样一种心情呢……  
 晚安，会梦你，那个女生。  
